--- a/index.html
+++ b/index.html
@@ -20,22 +20,25 @@
 
   /* Start heart container exactly centered */
   #start-heart {
-    width: 150px;
-    height: 150px;
-    cursor: pointer;
-    filter: drop-shadow(0 0 8px rgba(255, 0, 0, 0.7));
-    animation: beat 1s infinite;
-    z-index: 10;
-
-    /* absolute center */
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    width: 150px;
+    height: 150px;
+    cursor: pointer;
+    filter: drop-shadow(0 0 8px rgba(255, 0, 0, 0.7));
+    z-index: 10;
   }
 
-  /* Heart SVG fills and beats */
-  #start-heart svg {
+  /* Inner heart scales and animates */
+  #heart-inner {
+    width: 100%;
+    height: 100%;
+    animation: beat 1s infinite;
+  }
+
+  #heart-inner svg {
     width: 100%;
     height: 100%;
     fill: red;
@@ -126,10 +129,12 @@
 
 <!-- Start heart -->
 <div id="start-heart" title="Tap to start ❤️">
-  <svg viewBox="0 0 32 29.6" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
-    <path d="M23.6,0c-3.4,0-6.4,2.1-7.6,5.1C14.8,2.1,11.8,0,8.4,0C3.8,0,0,3.8,0,8.4c0,5.3,5.4,9.6,13.6,17.1l2.4,2.1l2.4-2.1
-      C26.6,18,32,13.7,32,8.4C32,3.8,28.2,0,23.6,0z"/>
-  </svg>
+  <div id="heart-inner">
+    <svg viewBox="0 0 32 29.6" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
+      <path d="M23.6,0c-3.4,0-6.4,2.1-7.6,5.1C14.8,2.1,11.8,0,8.4,0C3.8,0,0,3.8,0,8.4c0,5.3,5.4,9.6,13.6,17.1l2.4,2.1l2.4-2.1
+        C26.6,18,32,13.7,32,8.4C32,3.8,28.2,0,23.6,0z"/>
+    </svg>
+  </div>
 </div>
 
 <!-- Poem container -->
@@ -137,10 +142,11 @@
 <div id="watermark">Sir Binary</div>
 
 <!-- Audio -->
-<audio id="bg-music" src="AFG.m4a" preload="auto" loop></audio>
+<audio id="bg-music" src="AFG.m4a" preload="auto" loop playsinline></audio>
 
 <script>
   const startHeart = document.getElementById('start-heart');
+  const heartInner = document.getElementById('heart-inner');
   const poemContainer = document.getElementById('poem');
   const watermark = document.getElementById('watermark');
   const bgMusic = document.getElementById('bg-music');
@@ -235,8 +241,9 @@
 
   function startExperience() {
     startHeart.style.pointerEvents = 'none';
-    startHeart.style.animation = 'none';
-    const anim = startHeart.animate([
+    heartInner.style.animation = 'none';
+
+    const anim = heartInner.animate([
       { transform: 'scale(1)', opacity: 1 },
       { transform: 'scale(1.5)', opacity: 0 }
     ], { duration: 700, fill: 'forwards' });
@@ -244,15 +251,19 @@
     anim.onfinish = () => {
       startHeart.style.display = 'none';  // hide completely to free space
 
+      // Show poem and watermark simultaneously
       poemContainer.style.opacity = '1';
       watermark.style.opacity = '0.08';
+
+      // Start music and poem animation at the same time
+      bgMusic.volume = 0.6;
+      bgMusic.play().catch((err) => {
+        console.log('Audio play error:', err);
+      });
 
       heartsInterval = setInterval(createHeart, 500);
 
       showNextLine();
-
-      bgMusic.volume = 0.6;
-      bgMusic.play();
     };
   }
 
