--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Coded By Sir Binary</title>
 
-<!-- Google Fonts: Dancing Script -->
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet" />
 
 <style>
@@ -142,14 +141,11 @@
 <div id="watermark">Sir Binary</div>
 
 <!-- Audio -->
-<audio id="bg-music" src="AFG.mp3" preload="auto" loop playsinline></audio>
+<audio id="bg-music" src="AFG.mp3" preload="auto" playsinline></audio>
 
 <script>
-  const startHeart = document.getElementById('start-heart');
-  const heartInner = document.getElementById('heart-inner');
-  const poemContainer = document.getElementById('poem');
-  const watermark = document.getElementById('watermark');
-  const bgMusic = document.getElementById('bg-music');
+  let index = 0;
+  let heartsInterval;
 
   const poemLines = [
     { text: 'In Afghanistan we don\'t say "I love you"', time: 2980 },
@@ -164,15 +160,14 @@
     { text: 'Cheshme intezaarammmm', time: 6140 },
   ];
 
-  let index = 0;
-  let heartsInterval;
+  const poemContainer = document.getElementById('poem');
+  const watermark = document.getElementById('watermark');
+  const bgMusic = document.getElementById('bg-music');
 
   function splitLineWithHtml(htmlString) {
     const container = document.createElement('div');
     container.innerHTML = htmlString;
-
     const fragments = [];
-
     container.childNodes.forEach((node) => {
       if (node.nodeType === Node.TEXT_NODE) {
         const words = node.textContent.split(/(\s+)/);
@@ -188,24 +183,20 @@
         fragments.push(node.cloneNode(true));
       }
     });
-
     return fragments;
   }
 
   function showNextLine() {
     if (index >= poemLines.length) {
-      index = 0;
+      endExperience();
+      return;
     }
-
     const line = poemLines[index];
     poemContainer.innerHTML = '';
-
     const fragments = splitLineWithHtml(line.text);
     fragments.forEach(frag => poemContainer.appendChild(frag));
-
     const spans = poemContainer.querySelectorAll('span');
     let wordIndex = 0;
-
     function fadeNextWord() {
       if (wordIndex < spans.length) {
         spans[wordIndex].style.opacity = 1;
@@ -220,57 +211,101 @@
         }, remainingTime > 0 ? remainingTime : 0);
       }
     }
-
     fadeNextWord();
   }
 
   function createHeart() {
     const heart = document.createElement('div');
     heart.className = 'heart';
-
-    // random left and top across viewport width and height
     heart.style.left = Math.random() * window.innerWidth + 'px';
     heart.style.top = Math.random() * window.innerHeight + 'px';
-
-    // random animation duration
     heart.style.animationDuration = (5 + Math.random() * 5) + 's';
-
     document.body.appendChild(heart);
     setTimeout(() => heart.remove(), 10000);
   }
 
   async function startExperience() {
-    startHeart.style.pointerEvents = 'none';
-    heartInner.style.animation = 'none';
+    const currentStartHeart = document.getElementById('start-heart');
+    const currentHeartInner = currentStartHeart.querySelector('#heart-inner');
+    currentStartHeart.style.pointerEvents = 'none';
 
-    // Attempt to play music immediately on user tap with mute trick for iOS
-    try {
-      bgMusic.muted = true;
-      await bgMusic.play();
-      bgMusic.muted = false;
-      bgMusic.volume = 0.6;
-    } catch(e) {
-      console.log('Audio play failed:', e);
-    }
+    // Stop the heartbeat animation before fade out
+    currentHeartInner.style.animation = 'none';
 
-    const anim = heartInner.animate([
+    // Animate fade out and scale up
+    const anim = currentHeartInner.animate([
       { transform: 'scale(1)', opacity: 1 },
       { transform: 'scale(1.5)', opacity: 0 }
     ], { duration: 700, fill: 'forwards' });
 
-    anim.onfinish = () => {
-      startHeart.style.display = 'none';  // hide completely to free space
-
+    anim.onfinish = async () => {
+      currentStartHeart.style.display = 'none';
       poemContainer.style.opacity = '1';
       watermark.style.opacity = '0.08';
 
-      heartsInterval = setInterval(createHeart, 500);
+      try {
+        bgMusic.currentTime = 0;
+        await bgMusic.play();
+        bgMusic.volume = 0.6;
+      } catch (e) {
+        console.log('Audio play failed:', e);
+      }
 
+      heartsInterval = setInterval(createHeart, 500);
       showNextLine();
     };
   }
 
-  startHeart.addEventListener('click', startExperience);
+  function endExperience() {
+    bgMusic.pause();
+    bgMusic.currentTime = 0;
+    clearInterval(heartsInterval);
+
+    poemContainer.style.opacity = '0';
+    watermark.style.opacity = '0';
+
+    // Remove old start heart completely
+    const oldStartHeart = document.getElementById('start-heart');
+    if (oldStartHeart) oldStartHeart.remove();
+
+    // Create new start-heart element
+    const newStartHeart = document.createElement('div');
+    newStartHeart.id = 'start-heart';
+    newStartHeart.title = 'Tap to start ❤️';
+    newStartHeart.style.position = 'fixed';
+    newStartHeart.style.top = '50%';
+    newStartHeart.style.left = '50%';
+    newStartHeart.style.transform = 'translate(-50%, -50%)';
+    newStartHeart.style.width = '150px';
+    newStartHeart.style.height = '150px';
+    newStartHeart.style.cursor = 'pointer';
+    newStartHeart.style.filter = 'drop-shadow(0 0 8px rgba(255, 0, 0, 0.7))';
+    newStartHeart.style.zIndex = '10';
+
+    const heartInnerDiv = document.createElement('div');
+    heartInnerDiv.id = 'heart-inner';
+    heartInnerDiv.style.width = '100%';
+    heartInnerDiv.style.height = '100%';
+    heartInnerDiv.style.animation = 'beat 1s infinite';
+
+    heartInnerDiv.innerHTML = `
+      <svg viewBox="0 0 32 29.6" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" style="width: 100%; height: 100%; fill: red;">
+        <path d="M23.6,0c-3.4,0-6.4,2.1-7.6,5.1C14.8,2.1,11.8,0,8.4,0C3.8,0,0,3.8,0,8.4c0,5.3,5.4,9.6,13.6,17.1l2.4,2.1l2.4-2.1
+          C26.6,18,32,13.7,32,8.4C32,3.8,28.2,0,23.6,0z"/>
+      </svg>`;
+
+    newStartHeart.appendChild(heartInnerDiv);
+    document.body.appendChild(newStartHeart);
+
+    // Attach click event to new heart
+    newStartHeart.addEventListener('click', () => {
+      index = 0; // reset poem index
+      startExperience();
+    });
+  }
+
+  // Initial listener for first heart
+  document.getElementById('start-heart').addEventListener('click', startExperience);
 </script>
 
 </body>
