--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     position: relative;
   }
 
-  /* Start heart container exactly centered */
   #start-heart {
     position: fixed;
     top: 50%;
@@ -30,7 +29,6 @@
     z-index: 10;
   }
 
-  /* Inner heart scales and animates */
   #heart-inner {
     width: 100%;
     height: 100%;
@@ -48,7 +46,6 @@
     50% { transform: scale(1.15); }
   }
 
-  /* Poem and watermark centered absolutely and hidden initially */
   #poem, #watermark {
     opacity: 0;
     transition: opacity 1s ease;
@@ -59,7 +56,6 @@
     text-align: center;
   }
 
-  /* Poem styles with Dancing Script font */
   #poem {
     font-family: 'Dancing Script', cursive;
     font-size: 3em;
@@ -74,7 +70,6 @@
     transition: opacity 0.5s ease;
   }
 
-  /* Watermark styles */
   #watermark {
     font-size: 8em;
     opacity: 0.08;
@@ -85,7 +80,6 @@
     pointer-events: none;
   }
 
-  /* Floating hearts */
   .heart {
     position: fixed;
     width: 20px;
@@ -126,7 +120,6 @@
 </head>
 <body>
 
-<!-- Start heart -->
 <div id="start-heart" title="Tap to start ❤️">
   <div id="heart-inner">
     <svg viewBox="0 0 32 29.6" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
@@ -136,12 +129,10 @@
   </div>
 </div>
 
-<!-- Poem container -->
 <div id="poem"></div>
 <div id="watermark">Sir Binary</div>
 
-<!-- Audio -->
-<audio id="bg-music" src="AFG.mp3" preload="auto" playsinline muted></audio>
+<audio id="bg-music" src="AFG.mp3" preload="auto" playsinline></audio>
 
 <script>
   let index = 0;
@@ -163,6 +154,8 @@
   const poemContainer = document.getElementById('poem');
   const watermark = document.getElementById('watermark');
   const bgMusic = document.getElementById('bg-music');
+  const startHeart = document.getElementById('start-heart');
+  const heartInner = document.getElementById('heart-inner');
 
   function splitLineWithHtml(htmlString) {
     const container = document.createElement('div');
@@ -224,39 +217,37 @@
     setTimeout(() => heart.remove(), 10000);
   }
 
-  async function startExperience() {
-    const currentStartHeart = document.getElementById('start-heart');
-    const currentHeartInner = currentStartHeart.querySelector('#heart-inner');
-    currentStartHeart.style.pointerEvents = 'none';
-
-    // Stop the heartbeat animation before fade out
-    currentHeartInner.style.animation = 'none';
+  function startExperience() {
+    startHeart.style.pointerEvents = 'none';
+    heartInner.style.animation = 'none';
 
     // Animate fade out and scale up
-    const anim = currentHeartInner.animate([
+    const anim = heartInner.animate([
       { transform: 'scale(1)', opacity: 1 },
       { transform: 'scale(1.5)', opacity: 0 }
     ], { duration: 700, fill: 'forwards' });
 
-    // Ensure audio is loaded and play immediately muted then unmute for iOS
-    bgMusic.load();
+    // Play audio immediately on tap without delay
+    bgMusic.currentTime = 0;
+    const playPromise = bgMusic.play();
 
-    anim.onfinish = async () => {
-      currentStartHeart.style.display = 'none';
-      poemContainer.style.opacity = '1';
-      watermark.style.opacity = '0.08';
+    anim.onfinish = () => {
+      if (playPromise !== undefined) {
+        playPromise.then(() => {
+          startHeart.style.display = 'none';
+          poemContainer.style.opacity = '1';
+          watermark.style.opacity = '0.08';
 
-      try {
-        await bgMusic.play();
-        bgMusic.muted = false;
-        bgMusic.volume = 0.6;
-      } catch (e) {
-        console.log('Audio play failed:', e);
+          heartsInterval = setInterval(createHeart, 500);
+          showNextLine();
+        }).catch((error) => {
+          console.error('Audio play failed:', error);
+          alert('Audio playback failed. Please tap again.');
+          startHeart.style.pointerEvents = 'auto';
+          heartInner.style.animation = 'beat 1s infinite';
+        });
       }
-
-      heartsInterval = setInterval(createHeart, 500);
-      showNextLine();
-    };
+    }
   }
 
   function endExperience() {
@@ -267,11 +258,9 @@
     poemContainer.style.opacity = '0';
     watermark.style.opacity = '0';
 
-    // Remove old start heart completely
     const oldStartHeart = document.getElementById('start-heart');
     if (oldStartHeart) oldStartHeart.remove();
 
-    // Create new start-heart element
     const newStartHeart = document.createElement('div');
     newStartHeart.id = 'start-heart';
     newStartHeart.title = 'Tap to start ❤️';
@@ -300,15 +289,13 @@
     newStartHeart.appendChild(heartInnerDiv);
     document.body.appendChild(newStartHeart);
 
-    // Attach click event to new heart
     newStartHeart.addEventListener('click', () => {
-      index = 0; // reset poem index
+      index = 0;
       startExperience();
     });
   }
 
-  // Initial listener for first heart
-  document.getElementById('start-heart').addEventListener('click', startExperience);
+  startHeart.addEventListener('click', startExperience);
 </script>
 
 </body>
