--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     position: relative;
   }
 
+  /* Start heart container exactly centered */
   #start-heart {
     position: fixed;
     top: 50%;
@@ -29,6 +30,7 @@
     z-index: 10;
   }
 
+  /* Inner heart scales and animates */
   #heart-inner {
     width: 100%;
     height: 100%;
@@ -46,6 +48,7 @@
     50% { transform: scale(1.15); }
   }
 
+  /* Poem and watermark centered absolutely and hidden initially */
   #poem, #watermark {
     opacity: 0;
     transition: opacity 1s ease;
@@ -56,6 +59,7 @@
     text-align: center;
   }
 
+  /* Poem styles with Dancing Script font */
   #poem {
     font-family: 'Dancing Script', cursive;
     font-size: 3em;
@@ -70,6 +74,7 @@
     transition: opacity 0.5s ease;
   }
 
+  /* Watermark styles */
   #watermark {
     font-size: 8em;
     opacity: 0.08;
@@ -80,6 +85,7 @@
     pointer-events: none;
   }
 
+  /* Floating hearts */
   .heart {
     position: fixed;
     width: 20px;
@@ -120,6 +126,7 @@
 </head>
 <body>
 
+<!-- Start heart -->
 <div id="start-heart" title="Tap to start ❤️">
   <div id="heart-inner">
     <svg viewBox="0 0 32 29.6" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
@@ -129,10 +136,12 @@
   </div>
 </div>
 
+<!-- Poem container -->
 <div id="poem"></div>
 <div id="watermark">Sir Binary</div>
 
-<audio id="bg-music" src="AFG.mp3" preload="auto" playsinline></audio>
+<!-- Audio -->
+<audio id="bg-music" src="AFG.mp3" preload="auto" playsinline muted></audio>
 
 <script>
   let index = 0;
@@ -154,8 +163,6 @@
   const poemContainer = document.getElementById('poem');
   const watermark = document.getElementById('watermark');
   const bgMusic = document.getElementById('bg-music');
-  const startHeart = document.getElementById('start-heart');
-  const heartInner = document.getElementById('heart-inner');
 
   function splitLineWithHtml(htmlString) {
     const container = document.createElement('div');
@@ -217,37 +224,39 @@
     setTimeout(() => heart.remove(), 10000);
   }
 
-  function startExperience() {
-    startHeart.style.pointerEvents = 'none';
-    heartInner.style.animation = 'none';
+  async function startExperience() {
+    const currentStartHeart = document.getElementById('start-heart');
+    const currentHeartInner = currentStartHeart.querySelector('#heart-inner');
+    currentStartHeart.style.pointerEvents = 'none';
+
+    // Stop the heartbeat animation before fade out
+    currentHeartInner.style.animation = 'none';
 
     // Animate fade out and scale up
-    const anim = heartInner.animate([
+    const anim = currentHeartInner.animate([
       { transform: 'scale(1)', opacity: 1 },
       { transform: 'scale(1.5)', opacity: 0 }
     ], { duration: 700, fill: 'forwards' });
 
-    // Play audio immediately on tap without delay
-    bgMusic.currentTime = 0;
-    const playPromise = bgMusic.play();
+    // Ensure audio is loaded and play immediately muted then unmute for iOS
+    bgMusic.load();
 
-    anim.onfinish = () => {
-      if (playPromise !== undefined) {
-        playPromise.then(() => {
-          startHeart.style.display = 'none';
-          poemContainer.style.opacity = '1';
-          watermark.style.opacity = '0.08';
+    anim.onfinish = async () => {
+      currentStartHeart.style.display = 'none';
+      poemContainer.style.opacity = '1';
+      watermark.style.opacity = '0.08';
 
-          heartsInterval = setInterval(createHeart, 500);
-          showNextLine();
-        }).catch((error) => {
-          console.error('Audio play failed:', error);
-          alert('Audio playback failed. Please tap again.');
-          startHeart.style.pointerEvents = 'auto';
-          heartInner.style.animation = 'beat 1s infinite';
-        });
+      try {
+        await bgMusic.play();
+        bgMusic.muted = false;
+        bgMusic.volume = 0.6;
+      } catch (e) {
+        console.log('Audio play failed:', e);
       }
-    }
+
+      heartsInterval = setInterval(createHeart, 500);
+      showNextLine();
+    };
   }
 
   function endExperience() {
@@ -258,9 +267,11 @@
     poemContainer.style.opacity = '0';
     watermark.style.opacity = '0';
 
+    // Remove old start heart completely
     const oldStartHeart = document.getElementById('start-heart');
     if (oldStartHeart) oldStartHeart.remove();
 
+    // Create new start-heart element
     const newStartHeart = document.createElement('div');
     newStartHeart.id = 'start-heart';
     newStartHeart.title = 'Tap to start ❤️';
@@ -280,22 +291,24 @@
     heartInnerDiv.style.height = '100%';
     heartInnerDiv.style.animation = 'beat 1s infinite';
 
-    heartInnerDiv.innerHTML = 
+    heartInnerDiv.innerHTML = `
       <svg viewBox="0 0 32 29.6" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" style="width: 100%; height: 100%; fill: red;">
         <path d="M23.6,0c-3.4,0-6.4,2.1-7.6,5.1C14.8,2.1,11.8,0,8.4,0C3.8,0,0,3.8,0,8.4c0,5.3,5.4,9.6,13.6,17.1l2.4,2.1l2.4-2.1
           C26.6,18,32,13.7,32,8.4C32,3.8,28.2,0,23.6,0z"/>
-      </svg>;
+      </svg>`;
 
     newStartHeart.appendChild(heartInnerDiv);
     document.body.appendChild(newStartHeart);
 
+    // Attach click event to new heart
     newStartHeart.addEventListener('click', () => {
-      index = 0;
+      index = 0; // reset poem index
       startExperience();
     });
   }
 
-  startHeart.addEventListener('click', startExperience);
+  // Initial listener for first heart
+  document.getElementById('start-heart').addEventListener('click', startExperience);
 </script>
 
 </body>
